[package]
name = "blinky-stm32f4"
version = "0.1.0"
authors = ["elsuizo <mnoblia@disroot.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2"
nb = "1"
cortex-m = "0.7"
cortex-m-rt = "0.6"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2"

[dependencies.static-math]
path = "/home/elsuizo/Repos/static-math"
features = ["no-std"]

# [dependencies.num]
# version = "0.4"
# default-features = false


[dependencies.stm32f4xx-hal]
version = "0.9"
features = ["rt", "stm32f407"] # replace the model of your microcontroller here
